Fixed register, overflow of canvas, load cargo spacing

--- a/static/css/homepage.css
+++ b/static/css/homepage.css
@@ -52,8 +52,11 @@ label.dropdown {
   
 .sidebar {
   position: fixed;
+  z-index:9999;
   overflow: none;
   list-style-type: none;
+  top:0;
+  left:0;
   margin: 0;
   padding: 0;
   height: 100%;
@@ -96,8 +99,10 @@ a.header {
   font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
   width: 100%;
+  max-width:100%;
   height: 100%;
-  overflow:auto;
+  overflow:hidden;
+  white-space: nowrap;
 }
 
 /* Header follows scroll */
